<resources>
    <string name="app_name">SEATTLE EMERGENCY HUBS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seattle Emergency Hubs</string>
    <string name="nav_header_subtitle">info@seattleemergencyhubs.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Signin</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_slideshow">Neighborhoods</string>
    <string name="menu_tools">Resources</string>
    <string name="menu_share">Announcements</string>
    <string name="menu_send">Contact</string>
    <string name="title_selected_neighborhoods">MY DEFAULT NEIGHBORHOODS</string>
    <string name="title_activity_resourses">Seattle Emergency Hubs</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_resourse">ResourseActivity</string>
    <string name="title_activity_abouts">AboutActivity</string>
</resources>
